[package]
name = "gamboye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gbc = { path = "../gbc" }
eframe = "0.26.1"
egui = "0.26.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }